        bool IsNodeSelected(NodeId nodeId);
        bool IsLinkSelected(LinkId linkId);

    NEW: Editor now can return pins of the link
        New API:
        bool GetLinkPins(LinkId linkId, PinId* startPinId, PinId* endPinId);

        `startPinId` and `endPinId` may be null if caller is not interested
        in particular id.

    NEW: Editor now return ids of hovered node/pin/link
        New API:
        NodeId GetHoveredNode();
        PinId GetHoveredPin();
        LinkId GetHoveredLink();

    NEW: Add SetGroupSize() to explicitly set group size
        New API:
        void SetGroupSize(NodeId nodeId, const ImVec2& size);

    NEW: crude_json: Add save() and load()

        When CRUDE_JSON_IO == 1 value will have load() and save()
        function implemented using stdio.h FILE.

    NEW: crude_json: Add erase() and get_ptr()

    NEW: Application overhaul
        - Convert from function based to inheritable class
        - Add ability to close app and change title from code
        - Add ability to control main window flags (ex. show menubar)
        - Save ImGui state to ini file
        - Render using pre-multiplied alpha textures
        - Add extra fonts to examples.

    NEW: Reintegrate Widgets example from @crolando (#77)

    BUGFIX: Avoid crash while destroying editor.

    BUGFIX: Save draw list used by editor between Begin() and End()
        There is a chance ImGui::GetWindowDrawList() will return different draw list
        while nodes are being composed. To avoid troubles of manipulating incorrect
        draw list one obtained in Begin() is remembered and used.

    BUGFIX: Avoid division by zero in ImCubicBezierBoundingRect

    BUGFIX: Don't stuck in delete action if user does not handle it

    BUGFIX: Enable use channel splitter inside Begin/End for node and pin. #28

    BUGFIX: Don't manipulate channels when editor is suspended #28

    BUGFIX: Fix ObjectId serialization

    BUGFIX: GroupNode resize instead of move on low zoom #87